# hlbot-confluence-trader

./: .gitignore  AUTO_MODE_HANDOFF_2026_06_02.md  BUGS.md  CHANGELOG.md  Makefile  README.md  SPEC.md  SPEC_DECISION_ENGINE.md  pyproject.toml  start.bat  test.bat
.github/workflows/: ci.yml
config/: base.yaml  dev.yaml
logs/: launch_bot.ps1
reports/: DECISION_ENGINE_AUDIT_2026_06_02.md
reports/calibration/: sensitivity_matrix.md  sweep_results.csv
reports/hourly/: hourly_20260604_1013.json  hourly_20260604_1113.json  hourly_20260604_1117.json  hourly_20260604_1129.json  hourly_20260604_1233.json  hourly_20260604_1333.json  hourly_20260604_1447.json  hourly_20260604_1533.json  hourly_20260604_1633.json  hourly_20260604_1711.json  hourly_20260604_1732.json  (+8 more)
scripts/: hourly_report.py  print_sweep_summary.py  rerender_sweep_matrix.py  run_backtest.py  run_calibration.py  run_walkforward.py  test_adapter_smoke.py
src/: __init__.py
tests/: _diag.py  _e2e_api.py  _integ_smoke.py  _smoke_audit.py  test_audit_log.py  test_binance_adapter.py  test_bug_fixes_2026_06_02.py  test_data_capture.py  test_exchange_adapter.py  test_gate_adapter.py  test_okx_adapter.py  test_regime_detector.py  test_risk_and_execution.py  test_v0_2_0_direction_bias_fix.py  test_v0_2_1_position_replace_cap.py  test_v0_2_3_position_metadata.py  test_v0_2_4_flip_residual.py  test_v0_2_5_size_semantics.py  test_v0_2_6_equity_carryover.py  test_v0_2_7_full_state_carryover.py  test_v0_2_8_unrealized_pnl_percent_rename.py  test_v0_2_9_equity_breakdown.py  test_v0_3_0_hourly_fundamentals.py
(+265 files in other folders)
